# local-git-rs

./: Cargo.toml  README.md  install.sh
src/: hub.rs  main.rs  remote.rs
