[package]
name = "local-git-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
git2 = { version = "0.20.3", features = ["vendored-openssl"] }
serde_json = "1.0.148"
colored = "3.0.0"
dialoguer = "0.11.0"
chrono = "0.4.40"
humansize = "2.1.3"
